Styled the edit page

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,7 @@
-<h1>Listing movies</h1>
+<div class="container">
+<h1>All Movies</h1>
 
-<table>
+<table class="table table-responsive">
   <thead>
     <tr>
       <th>Title</th>
@@ -33,3 +34,4 @@
 <br>
 
 <%= link_to 'New Movie', new_movie_path %>
+</div>
