--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -11,27 +11,27 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :release_year %><br>
-    <%= f.number_field :release_year %>
+  <div class="form-group">
+    <%= f.label :release_year %>    
+    <%= f.text_field :release_year, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
+  <div class="form-group">
+    <%= f.label :price %>    
+    <%= f.text_field :price,class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description,class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :director %><br>
-    <%= f.text_field :director %>
+  <div class="form-group">
+    <%= f.label :director %>
+    <%= f.text_field :director,class: "form-control" %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.submit class: "btn btn-success custom-btn access" %>
   </div>
 <% end %>
