--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -9,6 +9,7 @@
       <th>Price</th>
       <th>Description</th>
       <th>Director</th>
+      <th>Stock</th>
       <th></th>
       <th></th>
       <th></th>
@@ -20,9 +21,10 @@
       <tr>
         <td><%= movie.title %></td>
         <td><%= movie.release_year %></td>
-        <td><%= movie.price %></td>
+        <td><%= print_price movie.price %></td>
         <td><%= movie.description %></td>
         <td><%= movie.director %></td>
+        <td><%= movie.stock %></td> 
         <td><%= link_to 'Show', movie %></td>
         <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
         <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
