--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -9,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand main-logo" href="#">MovieReview</a>
+      <%= link_to "MoviewReview", root_path, class: "navbar-brand main-logo" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
