--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@movie) do |f| %>
   <% if @movie.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@movie.errors.count, "error") %> prohibited this movie from being saved:</h2>
+    <div id="error_explanation", class="alert alert-danger alert dismissible">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <h4><%= pluralize(@movie.errors.count, "error") %> prohibited this movie from being saved:</h4>
 
       <ul>
       <% @movie.errors.full_messages.each do |msg| %>
@@ -30,6 +31,10 @@
   <div class="form-group">
     <%= f.label :director %>
     <%= f.text_field :director,class: "form-control" %>
+  </div>
+  <div class="form-group">
+  <%= f.label :stock %>
+  <%= f.text_field :stock, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.submit class: "btn btn-success custom-btn access" %>
