--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -151,8 +151,9 @@ form div.field_with_errors label {
 	font-weight: bold;
 }
 
-.form-control {
-	color: #222;
+.form-control,
+form input {
+  color: #000;
 }
 
 /*************************
@@ -166,6 +167,11 @@ form div.field_with_errors label {
 .in_stock{
     color: #009900;
     font-weight: bold;
+}
+
+.low_stock{
+	font-weight: bold;
+	color: #cccc00s;
 }
 /*************************
  TABLE
