--- a/app/views/movie_items/edit.html.erb
+++ b/app/views/movie_items/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing movie_item</h1>
+<div class="container"
+<h2>Edit quantity of "<%= @movie_item.movie.title %>"</h2>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @movie_item %> |
 <%= link_to 'Back', movie_items_path %>
+</div>
