Add image from dropbox

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -5,7 +5,7 @@
 **************************/
 body {
 	padding-top: 80px;
-	background-image: url(body_bg.png);
+	background-image: url(https://www.dropbox.com/s/zyjo68djcm7f8zk/body_bg.png?dl=1);
 	background-position: center;
 	color: #fefefe;
 	background-color: rgba(19,21,20,1);
